# starword-core

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: init.bat  init.sh  test.bat  test.sh
src/: sjc_base.cc  sjc_base.h  skc_base.cc  skc_base.h  star_base.cc  star_base.h  star_json.cc  star_json.h  star_text.cc  star_text.h  trie_tree.cc  trie_tree.h
test/: my_assert.cc  my_assert.h  test_base.cc  test_json.cc  test_text.cc
